--- a/view/fxmlMain.fxml
+++ b/view/fxmlMain.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.Group?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.mainControl">
    <children>
@@ -43,12 +45,22 @@
       </Group>
       <Group>
          <children>
-            <ImageView fx:id="screen" fitHeight="600.0" fitWidth="900.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="screen" fitHeight="600.0" fitWidth="900.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../imgs/screen.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="startButton" fitHeight="25.0" fitWidth="169.0" layoutX="696.0" layoutY="515.0" onMouseClicked="#clickStart" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="selectReceiver" fitHeight="51.0" fitWidth="348.0" layoutX="297.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imgs/selectReceiver.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="selectSender" fitHeight="51.0" fitWidth="348.0" layoutX="276.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imgs/selectSender.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="startButton" fitHeight="58.0" fitWidth="168.0" layoutX="679.0" layoutY="517.0" onMouseClicked="#clickStart" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../imgs/start.png" />
                </image>
@@ -56,6 +68,21 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
+            <Label fx:id="totalPackages" alignment="CENTER" contentDisplay="CENTER" layoutX="76.0" layoutY="530.0" prefHeight="27.0" prefWidth="121.0" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="receiverId" alignment="CENTER" contentDisplay="CENTER" layoutX="113.0" layoutY="155.0" prefHeight="35.0" prefWidth="48.0" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="senderId" alignment="CENTER" contentDisplay="CENTER" layoutX="113.0" layoutY="75.0" prefHeight="35.0" prefWidth="48.0" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
          </children>
       </Group>
    </children>
