--- a/view/fxmlMain.fxml
+++ b/view/fxmlMain.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -41,6 +42,16 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
+            <ImageView fx:id="helpButton" fitHeight="30.0" fitWidth="32.0" layoutX="811.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imgs/helpButton.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="helpScreen" fitHeight="392.0" fitWidth="637.0" layoutX="199.0" layoutY="104.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../imgs/helpScreen.png" />
+               </image>
+            </ImageView>
          </children>
       </Group>
       <Group>
@@ -50,12 +61,12 @@
                   <Image url="@../imgs/screen.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="selectReceiver" fitHeight="51.0" fitWidth="348.0" layoutX="297.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="selectReceiver" fitHeight="51.0" fitWidth="348.0" layoutX="297.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../imgs/selectReceiver.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="selectSender" fitHeight="51.0" fitWidth="348.0" layoutX="276.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="selectSender" fitHeight="51.0" fitWidth="348.0" layoutX="276.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../imgs/selectSender.png" />
                </image>
@@ -67,6 +78,11 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
+            </ImageView>
+            <ImageView fx:id="BoxTTL" fitHeight="51.0" fitWidth="348.0" layoutX="343.0" layoutY="241.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../imgs/selectTTL.png" />
+               </image>
             </ImageView>
             <Label fx:id="totalPackages" alignment="CENTER" contentDisplay="CENTER" layoutX="76.0" layoutY="530.0" prefHeight="27.0" prefWidth="121.0" textFill="WHITE">
                <font>
@@ -83,6 +99,15 @@
                   <Font size="16.0" />
                </font>
             </Label>
+            <Spinner fx:id="textTTL" layoutX="376.0" layoutY="286.0" style="-fx-background-color: #3a3a3a;" visible="false" />
+            <ImageView fx:id="sendButton" fitHeight="27.0" fitWidth="128.0" layoutX="405.0" layoutY="334.0" onMouseClicked="#clickSend" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../imgs/sendButton.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
          </children>
       </Group>
    </children>
