--- a/view/fxmlMain.fxml
+++ b/view/fxmlMain.fxml
@@ -129,7 +129,7 @@
                </font>
             </Label>
             <Spinner fx:id="textTTL" layoutX="376.0" layoutY="286.0" style="-fx-background-color: #3a3a3a;" visible="false" />
-            <ImageView fx:id="sendButton" fitHeight="27.0" fitWidth="128.0" layoutX="405.0" layoutY="334.0" onMouseClicked="#clickSend" pickOnBounds="true" preserveRatio="true" visible="false">
+            <ImageView fx:id="sendButton" fitHeight="27.0" fitWidth="128.0" layoutX="405.0" layoutY="334.0" onMouseClicked="#sendTTL" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../imgs/sendButton.png" />
                </image>
